src/objects/CPA_LOIMandatoryMessages__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>To store LOI forms mandatory fields and their messages</description>
    <fields>
        <fullName>txt_DependentField__c</fullName>
        <label>DependentField</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_FieldAPIName__c</fullName>
        <label>FieldAPIName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_FieldLabel__c</fullName>
        <label>FieldLabel</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_Message__c</fullName>
        <label>Message</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_ValueToCheck__c</fullName>
        <label>ValueToCheck</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>CPA_LOIMandatoryMessages</label>
</CustomObject>